<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">LiveFACE Launcher</string>
    <string name="app_package_name">cc.flydev.launcher</string>
    <string name="home">Home</string>
    <string name="uid_name">LiveFACE Launcher</string>
    <string name="folder_name"></string>
    <string name="wallpaper_instructions">Choose wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected <xliff:g example="Wallpaper 3 of 10" id="label">%1$s</xliff:g></string>
    <string name="wallpaper_delete">DELITE</string>
    <string name="pick_image">PICK IMG</string>
    <string name="pick_wallpaper">WALLPAPER</string>
    <string name="crop_wallpaper">CROP WALLPAPER</string>
    <string name="activity_not_found">APP isn\'t INSTALLED.</string>
    <string name="widgets_tab_label">WIDGETS</string>
    <string name="widget_adder">WIDGETS</string>
    <string name="toggle_weight_watcher">SHOW MEM</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">FOLDER NAME</string>
    <string name="rename_folder_title">RENAME FOLDER</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">CANCEL</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">LiveFACE Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome! LiveFACE LAUNCHER</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_custom_content_hint"></string>
    <string name="first_run_cling_search_bar_hint"></string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; hold background to manage wallpaper, widgets and settings.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Here\'s a folder</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; hold an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="default_folder_name" />
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="about_title2">Mender</string>
    <string name="about_title3">FROOT</string>
    <string name="chooser_ab_downloadmore">Theme in Google Play</string>
    <string name="lm_sethome_title">Set as main screen</string>
    <string name="lm_more_title">More Settings</string>
    <string name="lm_settings_title">LiveFACE Settings</string>
    <string name="lm_system_settings_title">System Settings</string>
    <string name="launcher_sethome_success">Main Screen Lock</string>
    <string name="lock_settings_title">LockScreen</string>
    <string name="lock_wallpaper_settings_title">LockScreen Wallpaper Settings</string>
    <string name="settings_lock_wallpaper">LockScreen Wallpaper</string>
    <string name="lock_wallpaper_prefix">LockScreen Wallpaper</string>
    <string name="lock_wallpaper_pick">Choose From Gallery</string>
    <string name="set_lock_wallpaper_success">Reset Wallpaper Successful. </string>
    <string name="lock_hint_settings_title">LockScreen Text Settings</string>
    <string name="lock_hint_settings_dialog_message">Those word are too long that you couldn\'t see them all</string>
    <string name="lock_hint_settings_dialog_title">Set the Text on LockScreen</string>
    <string name="settings_testing_title">Lab</string>
    <string name="settings_testing_upmenu_open">Control Center (Up Menu)</string>
    <string name="settings_lock_open">LockScreen</string>
    <string name="lock_pass_wrong">ERROR PASSWORD</string>
    <string name="settings_lock_pass">Set a Password for Screen Security</string>
    <string name="settings_lock_pass_verify">Confirm your PIN</string>
    <string name="settings_lock_pass_step1">Set Your PIN</string>
    <string name="settings_lock_pass_step2">Confirm your PIN</string>
    <string name="settings_lock_pass_step3">Set PIN</string>
    <string name="settings_lock_pass_mismatch">ERROR PASSWORD</string>
    <string name="settings_lock_pass_open">LockScreen PIN</string>
    <string name="settings_lock_pass_success">Successful </string>
    <string name="settings_need_close_lock_pass">Please clean the password first.</string>
    <string name="dialog_forget_title">Forget PIN</string>
    <string name="dialog_forget_message">Use the Password to unlock</string>
    <string name="dialog_forget_reset_success">Reset Successful</string>
    <string name="dialog_forget_complex_wrong">ERROR PASSWORD</string>
    <string name="switch_lock_title">LiveFACE LockScreen</string>
    <string name="liveface_debug">APPTEST</string>
    <string name="notice">Before you use LiveFACE LockScreen, please turn-off the system LockScreen service.(System Setting > Screen security > Screen lock > Choose None)</string>
    <string name="noticetitle">Compatibility Notice</string>
    <string name="interface_hide_shortcut_title">Hide APP</string>
    <string name="hide_shortcut_cancel">cancel</string>
    <string name="hide_shortcut_save">save</string>
    <string name="blur">Blur Wallpaper</string>
    <string name="button_blur">click set wallpaper</string>
    <string name="setting_title">QuickSettings</string>
    <string name="warning">If you device RAM less than 1GB, do not use it for stable.</string>
    <string name="guide_button">Get Start</string>
    <string name="guide_button1">Compatibility</string>
    <string name="notice1">Turn System ScreenLock Security to "None""</string>
    <string name="recommend">I strongly recommend an Android App for you: LiveFACE LAUNCHER. Find More: http://isliveface.com . Get it on Google Play: https://play.google.com/store/apps/details?id=cc.flydev.face</string>
    <string name="iconSizeSmall">Small</string>
    <string name="iconSizeMid">Medium</string>
    <string name="iconSizeLarge">Large</string>
    <string name="btnYes">Confirm</string>
    <string name="btnNo">Cancel</string>
    <string-array name="icon_size_desc">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>